# qnsdns

./: .gitignore  CLIENT_ARCHITECTURE.md  CMakeLists.txt  CONFIG.md  NEW_HEADER_DESIGN.md  OVERHEAD_ANALYSIS.md  README.md  README_redesigned.md  SERVER_ARCHITECTURE.md  client.ini  client_diff.txt  diff.patch  diff_output.patch  fast_install.sh  help.txt  install.sh  install_client.sh  install_server.sh  main.c  patch2.py  patch_status.py  plan.md  server.ini  server_diff.txt  tui_diff.txt  walkthrough.md
.github/workflows/: build.yml
.kilo/plans/: 1776409977939-brave-cabin.md
SPCDNS/: dns.h
build_new/: CMakeCache.txt
client/: agg.c  agg.h  client_common.h  dns_tx.c  dns_tx.h  main.c  main_redesigned.c  resolver_mod.c  resolver_mod.h  session.c  session.h  socks5.c  socks5.h  target_connector.c  target_connector.h
client/aggregation/: packet.c  packet.h
client/debug/: packet.c  packet.h
client/dns/: query.c  query.h
client/resolver/: init.c  init.h  mtu.c  mtu.h  probe.c  probe.h
client/session/: session.c  session.h
client/socks5/: proxy.c  proxy.h
client/tui/: callbacks.c  callbacks.h
plans/: debug_protocol_test_plan.md  downstream_sequencing_plan.md  extraction_guide.md  full_implementation_plan.md  optimization_plan.md  redesigned_architecture.md  refactoring_plan.md  tui_core_separation_plan.md  ultra_efficient_dns_tunnel.md
server/: dns_handler.c  dns_handler.h  main.c  main_redesigned.c  server_common.h  session.c  session.h  socks5_handler.c  socks5_handler.h  swarm.c  swarm.h
server/dns/: protocol.c  protocol.h
server/session/: session.c  session.h
server/swarm/: swarm.c  swarm.h
server/tui/: callbacks.c  callbacks.h
shared/: ai_optimizer.c  ai_optimizer.h  base32.c  base32.h  codec.c  codec.h  config.c  config.h  constants.h  dns_tunnel.c  dns_tunnel.h  errors.h  log.c  log.h  mgmt.c  mgmt.h  mgmt_protocol.h  msvc_compat.h  parallel_resolver.c  parallel_resolver.h  resolver_pool.c  resolver_pool.h  session_mgr.c  session_mgr.h  socks5_proxy.c  socks5_proxy.h  tui.c  tui.h  types.h  ultra_codec.c  ultra_codec.h
shared/fec/: core.h  raptorq.c  reedsolomon.c
shared/tui/: ansi.h  core.h  input.c  input.h  log.c  log.h  panels.c  panels.h  render.c  render.h  tui.h
shared/window/: sliding.c  sliding.h
tests/: test_sliding_window.c
tui-standalone/: CMakeLists.txt  main.c  mgmt_client.c  mgmt_client.h  renderer.c  renderer.h
uv/: win.h
verification_temp/: difference_list.md
